# ras

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml  test.yaml
ras-x86/: Cargo.toml  README.md  build.rs  inst_map.json
ras-x86-csv/: Cargo.toml
ras-x86-csv/src/: lib.rs
ras-x86-repr/: Cargo.toml  README.md  build.rs
ras-x86-repr/src/: instruction.rs  lib.rs  mnemonic.rs  operand.rs  prefix.rs
ras-x86/examples/: labels.rs  parser.rs  simple.s
ras-x86/src/: README.md  assembler.rs  context.rs  encoder.rs  error.rs  instruction.rs  lib.rs  macros.rs  main.rs  mnemonic.rs  object.rs  operand.rs  parser.rs  register.rs  symbol.rs
ras-x86/src/operand/: immediate.rs  memory.rs  register.rs
ras-x86/tests/: assemble.rs
ras-x86/tests/asm/: add.s  comments.s  imm.s  labels.s  sib.s
src/: main.rs  x86.rs
src/x86/: assembler.rs  encoder.rs  instruction.rs  instruction_encoding.rs  instruction_repr.rs  mnemonic.rs  prefix.rs  register.rs  repr.rs
src/x86/repr/: instruction.rs  instruction_map.rs  operand.rs
