[package]
name = "ras-x86-repr"
version = "0.1.0"
authors = ["Gabriela Alexandra Moldovan <gabi_250@live.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
target-lexicon = "0.11.1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
csv = "1.1.5"
quote = "1.0.8"
proc-macro2 = "1.0.24"
syn = "1.0.60"
ras-x86-csv = { path = "../ras-x86-csv" }
