[package]
name = "ras-x86"
version = "0.1.0"
authors = ["Gabriela Alexandra Moldovan <gabi_250@live.com>"]
edition = "2018"
build = "build/main.rs"

[dependencies]
ras-x86-repr = { path = "../ras-x86-repr" }
lazy_static = "1.4.0"
bincode = "1.3.3"
object = { version = "0.28.3", features = ["write"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
ras-x86-repr = { path = "../ras-x86-repr" }
csv = "1.1.6"
bincode = "1.3.3"
quote = "1.0.18"
proc-macro2 = "1.0.37"

[dev-dependencies]
goblin = { version = "0.5.1", features = ["elf32", "elf64", "endian_fd"], default-features = false }
